--- a/.rmtc.json5
+++ b/.rmtc.json5
@@ -7,8 +7,7 @@
 		// verify is a core workflow
 		'verify': [
 			// eslint is a step registered by the eslint plugin
-			'eslint',
-			'abcde'
+			'eslint'
 		]
 	}
 }
