--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
 		"class-methods-use-this": "off",
 		"jsdoc/require-param-description": "off",
 		"jsdoc/require-property-description": "off",
-		"jsdoc/require-returns-description": "off"
+		"jsdoc/require-returns-description": "off",
+		"require-atomic-updates": "off"
 	}
 }
