fix: don't allow defining duplicate steps

--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -20,6 +20,6 @@
   "dependencies": {
     "@rmtc/config": "*",
     "@rmtc/errors": "*",
-    "@rmtc/logger": "^0.0.0"
+    "@rmtc/logger": "*"
   }
 }
