--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -21,5 +21,8 @@
     "@rmtc/config": "*",
     "@rmtc/errors": "*",
     "@rmtc/logger": "*"
+  },
+  "devDependencies": {
+    "@rmtc/installer": "*"
   }
 }
