--- a/packages/toolchain/package.json
+++ b/packages/toolchain/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "@rmtc/config": "*",
     "@rmtc/errors": "*",
-    "@rmtc/logger": "^0.0.0",
-    "@rmtc/plugin": "*",
-    "@rmtc/plugin-core": "^0.0.0"
+    "@rmtc/installer": "*",
+    "@rmtc/logger": "*",
+    "@rmtc/plugin": "*"
   }
 }
