fix: simplify install scripts
We're now no longer using the install manager which was really
over-engineered. Plugins now use a regular workflow for install steps
and it's down to the user to make sure work is committed before running
the `rmtc:install` workflow as it's destructive.

--- a/.rmtc.json5
+++ b/.rmtc.json5
@@ -1,7 +1,8 @@
 {
 	plugins: [
+		'@rmtc/plugin-check-types',
 		'@rmtc/plugin-eslint',
-		'@rmtc/plugin-check-types'
+		'@rmtc/plugin-npm-scripts'
 	],
 	workflows: {
 		'verify': [
