--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "engines": {
     "node": "18.x || 20.x",
-    "npm": "8.x || 9.x"
+    "npm": "8.x || 9.x || 10.x"
   },
   "main": "index.js",
   "dependencies": {
