docs: add READMEs for all packages
This gets us ready to publish alpha versions. There's still a lot to do
but at least we have warnings not to use these packages.

Release-As: 0.1.0

--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rmtc/plugin",
   "version": "0.0.0",
-  "description": "The toolchain base plugin",
+  "description": "A base class to be extended by other @rmtc/toolchain plugins",
   "keywords": [],
   "author": "Rowan Manning (https://rowanmanning.com/)",
   "repository": {
