--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rmtc/config",
   "version": "0.0.0",
-  "description": "The toolchain config loader",
+  "description": "Configuration loading, parsing, and validation for the @rmtc/toolchain CLI",
   "keywords": [],
   "author": "Rowan Manning (https://rowanmanning.com/)",
   "repository": {
