--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rmtc/errors",
   "version": "0.0.0",
-  "description": "Common error classes",
+  "description": "Custom errors for the @rmtc/toolchain CLI",
   "keywords": [],
   "author": "Rowan Manning (https://rowanmanning.com/)",
   "repository": {
