--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rmtc/logger",
   "version": "0.0.0",
-  "description": "The toolchain command line logger",
+  "description": "Consistent logging for the @rmtc/toolchain CLI",
   "keywords": [],
   "author": "Rowan Manning (https://rowanmanning.com/)",
   "repository": {
