--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -18,7 +18,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@rmtc/errors": "*",
+    "@rmtc/errors": "^0.0.0",
     "@rmtc/logger": "^0.0.0",
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
