--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -18,8 +18,8 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@rmtc/config": "*",
-    "@rmtc/errors": "*",
-    "@rmtc/logger": "*"
+    "@rmtc/config": "^0.0.0",
+    "@rmtc/errors": "^0.0.0",
+    "@rmtc/logger": "^0.0.0"
   }
 }
