--- a/plugins/check-types/package.json
+++ b/plugins/check-types/package.json
@@ -18,7 +18,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@rmtc/plugin": "*",
+    "@rmtc/plugin": "^0.0.0",
     "typescript": "^5.1.6"
   }
 }
