--- a/plugins/eslint/package.json
+++ b/plugins/eslint/package.json
@@ -18,7 +18,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@rmtc/plugin": "*",
+    "@rmtc/plugin": "^0.0.0",
     "eslint": "^8.46.0"
   }
 }
