--- a/plugins/npm-scripts/package.json
+++ b/plugins/npm-scripts/package.json
@@ -18,7 +18,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@rmtc/plugin": "*",
+    "@rmtc/plugin": "^0.0.0",
     "detect-indent": "^6.1.0"
   }
 }
