--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: google-github-actions/release-please-action@v3
         id: release
         with:
+          token: ${{ secrets.RELEASE_PLEASE_GITHUB_TOKEN }}
           release-type: node
           command: manifest
 
