chore: ensure we're using version ranges

--- a/packages/toolchain/package.json
+++ b/packages/toolchain/package.json
@@ -21,9 +21,9 @@
     "toolchain": "cli.js"
   },
   "dependencies": {
-    "@rmtc/config": "0.1.1",
-    "@rmtc/errors": "0.1.0",
-    "@rmtc/logger": "0.1.0",
-    "@rmtc/plugin": "0.1.1"
+    "@rmtc/config": "^0.1.1",
+    "@rmtc/errors": "^0.1.0",
+    "@rmtc/logger": "^0.1.0",
+    "@rmtc/plugin": "^0.1.1"
   }
 }
