feat: add a create-toolchain script
Release-as: 0.1.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -38,6 +38,15 @@ updates:
       prefix: "fix:"
       prefix-development: "chore:"
   - package-ecosystem: "npm"
+    directory: "/packages/create-toolchain"
+    schedule:
+      interval: "daily"
+      time: "15:00"
+      timezone: "Europe/London"
+    commit-message:
+      prefix: "fix:"
+      prefix-development: "chore:"
+  - package-ecosystem: "npm"
     directory: "/packages/errors"
     schedule:
       interval: "daily"
