--- a/release-please-config.json
+++ b/release-please-config.json
@@ -30,6 +30,7 @@
 	],
 	"packages": {
 		"packages/config": {},
+		"packages/create-toolchain": {},
 		"packages/errors": {},
 		"packages/logger": {},
 		"packages/plugin": {},
