--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -7,5 +7,6 @@
 	"plugins/check-types": "0.1.1",
 	"plugins/eslint": "0.1.1",
 	"plugins/mocha": "0.1.1",
-	"plugins/npm-scripts": "0.1.1"
+	"plugins/npm-scripts": "0.1.1",
+	"packages/create-toolchain": "0.1.0"
 }
