feat: add a types-in-jsdoc plugin
This will replace the check-types plugin

Release-As: 0.1.0

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -38,6 +38,7 @@
 		"plugins/check-types": {},
 		"plugins/eslint": {},
 		"plugins/mocha": {},
-		"plugins/npm-scripts": {}
+		"plugins/npm-scripts": {},
+		"plugins/types-in-jsdoc": {}
 	}
 }
