--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -120,3 +120,12 @@ updates:
     commit-message:
       prefix: "fix:"
       prefix-development: "chore:"
+  - package-ecosystem: "npm"
+    directory: "/plugins/types-in-jsdoc"
+    schedule:
+      interval: "daily"
+      time: "15:00"
+      timezone: "Europe/London"
+    commit-message:
+      prefix: "fix:"
+      prefix-development: "chore:"
