--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,8 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
+		"declaration": true,
+		"declarationMap": true,
 		"maxNodeModuleJsDepth": 0,
 		"module": "commonjs",
 		"resolveJsonModule": true,
