--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^20.10.4",
     "eslint": "^8.55.0",
     "husky": "^8.0.3",
+    "testdouble": "^3.20.1",
     "typescript": "^5.3.3"
   },
   "mocha": {
