feat: add a new biome plugin
Release-As: 0.1.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -85,6 +85,15 @@ updates:
 
   # Monorepo plugins
   - package-ecosystem: "npm"
+    directory: "/plugins/biome"
+    schedule:
+      interval: "daily"
+      time: "15:00"
+      timezone: "Europe/London"
+    commit-message:
+      prefix: "fix:"
+      prefix-development: "chore:"
+  - package-ecosystem: "npm"
     directory: "/plugins/eslint"
     schedule:
       interval: "daily"
