--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -8,5 +8,6 @@
 	"plugins/mocha": "0.2.0",
 	"plugins/npm-scripts": "0.2.1",
 	"packages/create-toolchain": "0.1.1",
-	"plugins/types-in-jsdoc": "0.1.1"
+	"plugins/types-in-jsdoc": "0.1.1",
+	"plugins/biome": "0.1.0"
 }
