--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "typescript": "^5.3.3"
   },
   "mocha": {
-    "timeout": 10000
+    "timeout": 10000,
+    "ignore": ["**/*/invalid-js-plugin.js"]
   },
   "nyc": {
     "eager": true,
