--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "mocha": {
     "timeout": 10000,
-    "ignore": ["**/*/invalid-js-plugin.js"]
+    "ignore": ["**/*/fixtures/**/*"]
   },
   "nyc": {
     "eager": true,
