chore: add end-to-end tests for create-toolchain

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   },
   "mocha": {
     "timeout": 10000,
-    "ignore": ["**/*/fixtures/**/*"]
+    "ignore": [
+      "**/*/fixtures/**/*"
+    ]
   },
   "nyc": {
     "eager": true,
