feat: add a contributing plugin for docs sync
Release-As: 0.1.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -94,6 +94,15 @@ updates:
       prefix: "fix:"
       prefix-development: "chore:"
   - package-ecosystem: "npm"
+    directory: "/plugins/contributing"
+    schedule:
+      interval: "daily"
+      time: "15:00"
+      timezone: "Europe/London"
+    commit-message:
+      prefix: "fix:"
+      prefix-development: "chore:"
+  - package-ecosystem: "npm"
     directory: "/plugins/eslint"
     schedule:
       interval: "daily"
