--- a/release-please-config.json
+++ b/release-please-config.json
@@ -36,6 +36,7 @@
 		"packages/plugin": {},
 		"packages/toolchain": {},
 		"plugins/biome": {},
+		"plugins/contributing": {},
 		"plugins/eslint": {},
 		"plugins/mocha": {},
 		"plugins/npm-scripts": {},
