--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@rmtc/config": "^0.3.2",
     "@rmtc/errors": "^0.2.1",
-    "@rmtc/logger": "^0.1.2"
+    "@rmtc/logger": "^0.1.2",
+    "detect-indentation": "^6.6.0"
   }
 }
