--- a/plugins/npm-scripts/package.json
+++ b/plugins/npm-scripts/package.json
@@ -18,7 +18,6 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@rmtc/plugin": "^0.2.2",
-    "detect-indent": "^6.1.0"
+    "@rmtc/plugin": "^0.2.2"
   }
 }
