--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -2,13 +2,14 @@
 	"packages/config": "0.3.2",
 	"packages/errors": "0.2.1",
 	"packages/logger": "0.1.2",
-	"packages/plugin": "0.2.2",
-	"packages/toolchain": "0.1.5",
-	"plugins/eslint": "0.1.5",
-	"plugins/mocha": "0.2.3",
-	"plugins/npm-scripts": "0.3.0",
+	"packages/plugin": "0.2.3",
+	"packages/toolchain": "0.1.6",
+	"plugins/eslint": "0.1.6",
+	"plugins/mocha": "0.2.4",
+	"plugins/npm-scripts": "0.4.0",
 	"packages/create-toolchain": "0.1.4",
-	"plugins/types-in-jsdoc": "0.2.3",
-	"plugins/biome": "0.2.2",
-	"plugins/contributing": "0.1.0"
+	"plugins/types-in-jsdoc": "0.2.4",
+	"plugins/biome": "0.2.3",
+	"plugins/contributing": "0.1.1",
+	"plugins/mit-license": "0.1.0"
 }
