feat: add an ignore-files plugin
Release-As: 0.1.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -112,6 +112,15 @@ updates:
       prefix: "fix:"
       prefix-development: "chore:"
   - package-ecosystem: "npm"
+    directory: "/plugins/ignore-files"
+    schedule:
+      interval: "daily"
+      time: "15:00"
+      timezone: "Europe/London"
+    commit-message:
+      prefix: "fix:"
+      prefix-development: "chore:"
+  - package-ecosystem: "npm"
     directory: "/plugins/mit-license"
     schedule:
       interval: "daily"
