--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,15 +1,16 @@
 {
-	"packages/config": "0.3.2",
-	"packages/errors": "0.2.1",
-	"packages/logger": "0.1.2",
-	"packages/plugin": "0.2.3",
-	"packages/toolchain": "0.1.6",
-	"plugins/eslint": "0.1.6",
-	"plugins/mocha": "0.2.4",
-	"plugins/npm-scripts": "0.4.0",
-	"packages/create-toolchain": "0.1.4",
-	"plugins/types-in-jsdoc": "0.2.4",
-	"plugins/biome": "0.2.3",
-	"plugins/contributing": "0.1.1",
-	"plugins/mit-license": "0.1.0"
+	"packages/config": "0.3.3",
+	"packages/errors": "0.2.2",
+	"packages/logger": "0.1.3",
+	"packages/plugin": "0.2.4",
+	"packages/toolchain": "0.1.7",
+	"plugins/eslint": "0.1.7",
+	"plugins/mocha": "0.2.5",
+	"plugins/npm-scripts": "0.4.1",
+	"packages/create-toolchain": "0.1.5",
+	"plugins/types-in-jsdoc": "0.2.5",
+	"plugins/biome": "0.2.4",
+	"plugins/contributing": "0.1.2",
+	"plugins/mit-license": "0.1.1",
+	"plugins/ignore-files": "0.1.0"
 }
