--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -35,6 +35,9 @@ jobs:
       - run: npm install
         if: ${{ steps.release.outputs.releases_created }}
 
+      - run: npm run build
+        if: ${{ steps.release.outputs.releases_created }}
+
       - name: Save release please output
         run: |
           cat << EOF > ./release-please-output.json 
