--- a/.rmtc.json5
+++ b/.rmtc.json5
@@ -3,6 +3,7 @@
 		'@rmtc/plugin-eslint',
 		'@rmtc/plugin-types-in-jsdoc',
 		'@rmtc/plugin-npm-scripts',
+		'@rmtc/plugin-ignore-files',
 		['@rmtc/plugin-mit-license', {
 			holders: 'Rowan Manning'
 		}],
