--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -22,5 +22,8 @@
     "@rmtc/errors": "^0.2.2",
     "@rmtc/logger": "^0.1.3",
     "detect-indentation": "^6.7.0"
+  },
+  "devDependencies": {
+    "@rmtc/project": "^0.0.0"
   }
 }
