--- a/packages/toolchain/package.json
+++ b/packages/toolchain/package.json
@@ -24,6 +24,7 @@
     "@rmtc/config": "^0.3.3",
     "@rmtc/errors": "^0.2.2",
     "@rmtc/logger": "^0.1.3",
-    "@rmtc/plugin": "^0.3.0"
+    "@rmtc/plugin": "^0.3.0",
+    "@rmtc/project": "^0.0.0"
   }
 }
