--- a/release-please-config.json
+++ b/release-please-config.json
@@ -34,6 +34,7 @@
 		"packages/errors": {},
 		"packages/logger": {},
 		"packages/plugin": {},
+		"packages/project": {},
 		"packages/toolchain": {},
 		"plugins/biome": {},
 		"plugins/contributing": {},
