--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -2,15 +2,16 @@
 	"packages/config": "0.3.3",
 	"packages/errors": "0.2.2",
 	"packages/logger": "0.1.3",
-	"packages/plugin": "0.3.0",
-	"packages/toolchain": "0.1.8",
-	"plugins/eslint": "0.1.8",
-	"plugins/mocha": "0.3.0",
-	"plugins/npm-scripts": "0.4.2",
+	"packages/plugin": "0.4.0",
+	"packages/toolchain": "0.1.9",
+	"plugins/eslint": "0.1.9",
+	"plugins/mocha": "0.3.1",
+	"plugins/npm-scripts": "0.4.3",
 	"packages/create-toolchain": "0.1.5",
-	"plugins/types-in-jsdoc": "0.2.6",
-	"plugins/biome": "0.2.5",
-	"plugins/contributing": "0.1.3",
-	"plugins/mit-license": "0.1.2",
-	"plugins/ignore-files": "0.1.1"
+	"plugins/types-in-jsdoc": "0.2.7",
+	"plugins/biome": "0.2.6",
+	"plugins/contributing": "0.1.4",
+	"plugins/mit-license": "0.1.3",
+	"plugins/ignore-files": "0.1.2",
+	"packages/project": "0.1.0"
 }
