--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "build": "toolchain build",
     "postinstall": "toolchain postinstall",
-    "prepare": "husky install",
+    "prepare": "husky",
     "test:end-to-end": "toolchain test:end-to-end",
     "test:unit": "toolchain test:unit",
     "test": "toolchain test",
@@ -34,7 +34,7 @@
     "@rowanmanning/eslint-config": "^8.1.0",
     "@types/node": "^20.11.10",
     "eslint": "^8.56.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.7",
     "testdouble": "^3.20.1",
     "typescript": "^5.3.3"
   },
