chore: switch from ESLint to Biome
This includes decommissioning the eslint plugin.

--- a/.rmtc.json5
+++ b/.rmtc.json5
@@ -1,6 +1,6 @@
 {
 	plugins: [
-		'@rmtc/plugin-eslint',
+		'@rmtc/plugin-biome',
 		'@rmtc/plugin-types-in-jsdoc',
 		'@rmtc/plugin-npm-scripts',
 		'@rmtc/plugin-ignore-files',
