chore: apply biome formatting

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,12 +14,6 @@
 		"target": "es2022",
 		"useUnknownInCatchVariables": true
 	},
-	"exclude": [
-		"coverage",
-		"node_modules",
-		"**/*.test.js"
-	],
-	"include": [
-		"**/*.js"
-	]
+	"exclude": ["coverage", "node_modules", "**/*.test.js"],
+	"include": ["**/*.js"]
 }
