--- a/release-please-config.json
+++ b/release-please-config.json
@@ -25,9 +25,7 @@
 	"prerelease": true,
 	"bump-minor-pre-major": true,
 	"bump-patch-for-minor-pre-major": true,
-	"plugins": [
-		"node-workspace"
-	],
+	"plugins": ["node-workspace"],
 	"packages": {
 		"packages/config": {},
 		"packages/create-toolchain": {},
