feat: add Node.js 22 support

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "plugins/*"
   ],
   "engines": {
-    "node": "18.x || 20.x",
+    "node": "18.x || 20.x || 22.x",
     "npm": "8.x || 9.x || 10.x || 10.x"
   },
   "scripts": {
