--- a/plugins/contributing/package.json
+++ b/plugins/contributing/package.json
@@ -13,7 +13,7 @@
   "bugs": "https://github.com/rowanmanning/toolchain/issues",
   "license": "MIT",
   "engines": {
-    "node": "18.x || 20.x",
+    "node": "18.x || 20.x || 22.x",
     "npm": "8.x || 9.x || 10.x"
   },
   "main": "index.js",
