chore: migrate to a shared workflow

--- a/.npmignore
+++ b/.npmignore
@@ -5,12 +5,11 @@
 .github
 .husky
 .nyc_output
-.release-please-manifest.json
+.release-please
 CHANGELOG.md
 biome.json
 coverage
 docs
 example
 jsconfig.json
-release-please-config.json
 test
