--- a/.release-please/config.json
+++ b/.release-please/config.json
@@ -26,6 +26,7 @@
 	"bump-minor-pre-major": true,
 	"bump-patch-for-minor-pre-major": true,
 	"plugins": ["node-workspace"],
+	"release-type": "node",
 	"packages": {
 		"packages/config": {},
 		"packages/create-toolchain": {},
